--- a/index.html
+++ b/index.html
@@ -1,33 +1,54 @@
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 <head>
-    <title>Sistema Monitor</title>
-    <link href="style.css" rel="stylesheet" />
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>SISTEMA MONITOR</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <header>
-        <div class="header-logo">LOGO</div>
-        <nav>
-            <ul class="menu_nav">
-                <li>menu1</li>
-                <li>menu1</li>
-                <li>menu1</li>
-                <li>menu1</li>
-                <li>menu1</li>
-            </ul>
-        </nav>
 
-    </header>
-
+	<header>
+		<p>CÂMERAS DISPONÍVEIS</p>
+	</header>
     <main>
-        <div>
-                <video id="movie" width="460" height="306" preload autoplay>
-        <source src="rtmp://fl2.sz.xlcdn.com:80/sz=Deltion_College=lb1"  type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
-            <!-- HERE THE CODE FOR THE ALTERNATIVE PLAYER (FLASH) WILL BE! -->
-    </video>
-
-            <embed src="http://192.168.43.22/240x240.jpeg" autostart="false" height="240" width="240" />
-            <img src="http://192.168.43.22/240x240.jpeg" alt="Alternate Text" />
-        </div>
+    	<section>
+    		 
+    		<article>
+    			    <div>
+				      <iframe src="http://192.168.43.227/800x600.mjpeg"  width="800" height="600"></iframe>
+				    </div>
+    		</article>
+    		<article>
+    			    <div>
+				      <iframe src="C:\Users\LENOVO\Videos\borboleta.mp4"  width="325" height="240"></iframe>
+				    </div>
+    		</article>
+    		<article>
+    			    <div>
+				      <iframe src="C:\Users\LENOVO\Videos\slideshow4.mp4"  width="325" height="240"></iframe>
+				    </div>
+    		</article>
+    		<article>
+    			    <div>
+				      <iframe src="C:\Users\LENOVO\Videos\borboleta.mp4"  width="325" height="240"></iframe>
+				    </div>
+    		</article>    		<article>
+    			    <div>
+				      <iframe src="C:\Users\LENOVO\Videos\slideshow4.mp4"  width="325" height="240"></iframe>
+				    </div>
+    		</article>
+    		<article>
+    			    <div>
+				      <iframe src="C:\Users\LENOVO\Videos\borboleta.mp4"  width="325" height="240"></iframe>
+				    </div>
+    		</article>
+    	</section>
     </main>
+    <footer>
+    	<p><a href="#"> &COPY; SISTEMA MONITOR - 2023</a></p>
+
+    </footer>
+
 </body>
 </html>
